--- a/src/index.css
+++ b/src/index.css
@@ -21,3 +21,14 @@ body {
   flex-direction: column;
   align-items: center;
 }
+
+input[type="text"],
+input[type="button"] {
+  -webkit-appearance: none;
+  border-radius: 0;
+}
+
+* {
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+}
